@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.program.deluge"
        name="Deluge"
-       version="0.5.1"
+       version="0.5.2"
        provider-name="Andriy Korchak (kharts)">
     <requires>
         <import addon="xbmc.python" version="2.1.0"/>
