@@ -1,3 +1,6 @@
+[B]Version 0.5.2 (11.02.2016)[/B]
+- Added "Add torrent" functionality.
+
 [B]Version 0.5.1 (29.06.2015)[/B]
 - Updated for Kodi/XBMC v13+
 - Fixed errors:
